@@ -3,6 +3,7 @@ Version: 1.1.0
 Date: ????
   Features:
     - Replace ghost pipes
+    - Place ghost pipes when placing ghost underground pipes
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.4
 Date: 2021-12-28
